Added internationalisation and refactored some code

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 		{{ include Components/header.tmpl.html }}
 		<main class="centered">
 			<h1 id="err-404-emoji">\(o_o)/</h1>
-			<h1>Unfortunately this page doesn't exist 😔</h1>
+			<h1>{{ _ 404-text }} 😔</h1>
 			<br>
 		</main>
 		{{ include Components/footer.tmpl.html }}
