--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 				<li>Leaderboards and User profiles - Gamifies the system by challenging the user to compete in weekly leaderboards</li>
 			</ol>
 			<p>
-				The app is not a dictionary, the user is supposed to use a separate dictionary(like <a href="https://pleco.com">pleco</a> for Chinese).
+				The app is not a dictionary, the user is supposed to use a separate dictionary(like <a href="https://pleco.com">Pleco</a> for Chinese).
 			</p>
 
 			<h2>The story of the app's development</h2>
@@ -32,7 +32,7 @@
 
 				<br><br>
 
-				The name {{ trademark }} comes from a bad joke about the videogame <a href="https://en.wikipedia.org/wiki/Among_Us">Among us</a> where people all over the internet were going insane when 
+				The name {{ trademark }} comes from a bad joke about the video game <a href="https://en.wikipedia.org/wiki/Among_Us">Among us</a> where people all over the internet were going insane when
 				they saw the geometric shape of the crewmates in the game. In Chinese, the name use the 2 symbols "卣囙", pronounced as "yǒuyīn" in pinyin, look like the crewmates. Additionally, 
 				the name of the site is similar to the following 3 words:
 			</p>
@@ -57,7 +57,7 @@
 				<li><a href="https://github.com/parsimonhi/animCJK">animCJK</a> - Provides data for Japanese Kanji and most Japanese Kana</li>
 			</ol>
 			<p>
-				Addtionally, we want to thank the following people for helping with the development of the application:
+				Additionally, we want to thank the following people for helping with the development of the application:
 			</p>
 			<ol>
 				<li><a href="https://github.com/ProHunter67BG">Hristian Rusev</a> for providing German translations</li>
@@ -68,14 +68,14 @@
 			<h2>Start session button or writer becomes really large</h2>
 			<p>Q: When I resize the window or finish a test, the start session button or the writer becomes larger than the available screen real estate, why is that?</p>
 			<p>
-				A: Unfortunarely, this peculiar error cannot be resolved by us, because it's mainly caused by third party extensions. One example is <a href="https://grammarly.com">Grammarly</a>.
+				A: Unfortunately, this peculiar error cannot be resolved by us, because it's mainly caused by third party extensions. One example is <a href="https://grammarly.com">Grammarly</a>.
 				The only way to stop that from happening is to find out which extension causes this and disable it for our site.
 			</p>
 
 			<h1>More like {{ trademark }}</h1>
 			<p><a href="https://bgks.madladsquad.com">BGKS</a> - A website for correcting grammar, punctuation and spelling</p>
 			<p><a href="https://littok.madladsquad.com">LitTok</a> - Book reading as TikTok</p>
-			<p><a href="https://madladsquad.com/">MadLad Squad</a> develops more than just {{ trademark }}, check out the following CJK/Language learning applications and libraries<p/>
+			<p><a href="https://madladsquad.com/">MadLad Squad</a> develops more than just {{ trademark }}, check out the following CJK/Language learning applications and libraries</p>
 			<ol>
 				<li><a href="https://bgks.madladsquad.com">BGKS</a> - A website for correcting grammar, punctuation and spelling</li>
 				<li><a href="https://littok.madladsquad.com">LitTok</a> - Book reading as TikTok</li>
