--- a/account.html
+++ b/account.html
@@ -9,9 +9,9 @@
 	<body data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 		{{ include Components/header.tmpl.html }}
 		<main class="centered">
-			<h1 id="coming-soon-header">This page is coming soon! 🚧</h1>
-			<p id="coming-soon-text">Maybe check out the main <a href="https://madladsquad.com/">MadLad Squad's page</a> or <a href="./index.html">return to the main page</a>!</p>
-			<p id="coming-soon-text">Thank you for your patience! ❤️</p>
+			<h1 id="coming-soon-header">{{ _ coming-soon-header }} 🚧</h1>
+			<p id="coming-soon-text-1">Maybe check out the main <a href="https://madladsquad.com/">MadLad Squad's page</a> or <a href="./index.html">return to the main page</a>!</p>
+			<p id="coming-soon-text-2">{{ _ coming-soon-text-2 }} ❤️</p>
 		</main>
 		<hr id="main-page-hr">
 		{{ include Components/footer.tmpl.html }}
