--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -8,16 +8,16 @@
 	</head>
 	<body>
 		{{ include Components/header.tmpl.html }}
-		<h1 id="deck-new-card-header" class="centered">New card</h1>
+		<h1 id="deck-new-card-header" class="centered">{{ _ new-card-h1 }}</h1>
 		<main>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
 			<section id="input-mode" class="centered">
-				<p>Input: </p>
+				<p>{{ _ input-mode-p }}</p>
 				<div id="input-mode-internal">
 					<div>
-						<input 	type="radio" name="type" value="false" checked onclick="window.bUsingPinyinConversion = false">None</input>
+						<input 	type="radio" name="type" value="false" checked onclick="window.bUsingPinyinConversion = false">{{ _ input-mode-none }}</input>
 					</div>
-					<div title="Enables you to use Pinyin number notation in text boxes. It will then convert the text to actual pinyin. Example: 'pin1 yin1' will become 'pīn yīn'.">
+					<div title="{{ _ pinyin-input-description }}">
 						<input type="radio" name="type" value="true" onclick="window.bUsingPinyinConversion = true">Pin1 yin1</input>
 					</div>
 				</div>
@@ -28,14 +28,14 @@
 			</section>
 			<!-- This is normaly hidden, except when editing phrases. When editing phrases thist will be populated with previews of every card in -->
 			<section id="phrase-preview-section" style="display: none;">
-				<h1 class="centered">Previews</h1>
+				<h1 class="centered">{{ _ phrase-preview-section-header }}</h1>
 				<section id="phrase-preview-section-container" class="deck">
 					<!-- This will be filled with preview cards from Javascript -->
 				</section>
 			</section>
 			<section id="navigation-footer">
-				<button id="finish-edit-button" class="card-button-edit">Finish</button>
-				<button id="cancel-edit-button" class="card-button-edit" onclick="location.href = './deck.html'">Cancel</button>
+				<button id="finish-edit-button" class="card-button-edit">{{ _ finish-edit-button }}</button>
+				<button id="cancel-edit-button" class="card-button-edit" onclick="location.href = './deck.html'">{{ _ cancel-edit-button }}</button>
 			</section>
 		</main>
 		{{ include Components/footer.tmpl.html }}
