--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 		<main id="main-page" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
 			<section id="main-page-info-container">
 				<div id="phrase-info-widget">
-					<p id="phrase-info-widget-spelling">My phrase</p>
-					<p id="phrase-info-widget-errors">Phrases: 0/0; Errors: 0</p>
-					<p>Definitions</p>
+					<p id="phrase-info-widget-spelling">{{ _ phrase-info-widget-spelling }}</p>
+					<p id="phrase-info-widget-errors">{{ _ phrase-info-widget-errors {{ list 0/0 0 }} }}</p>
+					<p>{{ _ character-info-widget-def-p }}</p>
 					<ol id="phrase-info-widget-info">
-						<li>To be loaded</li>
+						<li>{{ _ character-info-widget-info-default }}</li>
 					</ol>
 				</div>
 				<div id="character-info-widget">
-					<p id="character-info-widget-spelling">Spelling: To be loaded</p>
-					<p id="character-info-widget-errors">Cards: 0/0; Errors: 0</p>
-					<p id="character-info-widget-def-p">Definitions:</p>
+					<p id="character-info-widget-spelling">{{ _ character-info-widget-spelling }}</p>
+					<p id="character-info-widget-errors">{{ _ character-info-widget-errors {{ list 0/0 0 }} }}</p>
+					<p id="character-info-widget-def-p">{{ _ character-info-widget-def-p }}</p>
 					<ol id="character-info-widget-info">
-						<li>To be loaded</li>
+						<li>{{ _ character-info-widget-info-default }}</li>
 					</ol>
 				</div>
 			</section>
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
 			<section id="start-button-writer-section">
 				<button id="start-button" class="card-button-edit centered character-prop large-button-text" data-gramm="false" data-gramm_editor="false" data-enable-grammarly="false" spellcheck="false">
-					Click to start session
+					{{ _ start-button }}
 				</button>
 				<!-- This image will get dynamically imported by main-page.js when the button is clicked
 				<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="character-target-div" class="centered character-div character-prop">
