--- a/marketplace.html
+++ b/marketplace.html
@@ -10,15 +10,15 @@
 	<body>
 		{{ include Components/header.tmpl.html }}
 		<main id="main">
-			<h1 class="centered">Official decks</h1>
+			<h1 class="centered">{{ _ official_decks_header }}</h1>
 			<section id="marketplace-deck-container" class="deck">
 				<div id="new-deck-upload-card" class="card centered">
 					<h3 id="new-card-header-smaller">+</h3>
-					<p>Want to add your deck to the marketplace? Click below to learn more!</p>
-					<button id="upload-deck-public" class="card-button-edit" onclick="window.open('https://github.com/MadLadSquad/YouyinPublicDeckRepository')">Upload</button>
+					<p>{{ _ new_deck_upload_info }}</p>
+					<button id="upload-deck-public" class="card-button-edit" onclick="window.open('https://github.com/MadLadSquad/YouyinPublicDeckRepository')">{{ _ upload-deck-public }}</button>
 				</div>
 			</section>
-			<h1 class="centered">Community decks</h1>
+			<h1 class="centered">{{ _ community_decks_header }}</h1>
 			<section id="deck-community-master">
 			</section>
 		</main>
