--- a/marketplace.html
+++ b/marketplace.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="./deck.css" type="text/css">
 		<link rel="stylesheet" href="./marketplace.css" type="text/css">
 
-		<title class="site-title">Marketplace | {{ trademark }} </title>
+		<title class="site-title">{{ _ marketplace-deck-button }} | {{ trademark }} </title>
 	</head>
 	<body>
 		{{ include Components/header.tmpl.html }}
