--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -4,7 +4,7 @@
 		{{ include Components/head.tmpl.html }}
 		<link rel="stylesheet" href="./deck.css">
 
-		<title class="site-title">Edit Card | {{ trademark }} </title>
+		<title class="site-title">{{ _ edit-card-site-title }} | {{ trademark }} </title>
 	</head>
 	<body>
 		{{ include Components/header.tmpl.html }}
