Fixed some issues and added animations

--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -35,7 +35,7 @@
 			</section>
 			<section id="navigation-footer">
 				<button id="finish-edit-button" class="card-button-edit">{{ _ finish-edit-button }}</button>
-				<button id="cancel-edit-button" class="card-button-edit" onclick="location.href = './deck.html'">{{ _ cancel-edit-button }}</button>
+				<button id="cancel-edit-button" class="card-button-edit">{{ _ cancel-edit-button }}</button>
 			</section>
 		</main>
 		{{ include Components/footer.tmpl.html }}
