--- a/marketplace.html
+++ b/marketplace.html
@@ -15,7 +15,7 @@
 				<div id="new-deck-upload-card" class="card centered">
 					<h3 id="new-card-header-smaller">+</h3>
 					<p>{{ _ new_deck_upload_info }}</p>
-					<button id="upload-deck-public" class="card-button-edit" onclick="window.open('https://github.com/MadLadSquad/YouyinPublicDeckRepository')">{{ _ upload-deck-public }}</button>
+					<button id="upload-deck-public" class="card-button-edit">{{ _ upload-deck-public }}</button>
 				</div>
 			</section>
 			<h1 class="centered">{{ _ community_decks_header }}</h1>
