Fixed some warnings

--- a/deck.html
+++ b/deck.html
@@ -29,7 +29,7 @@
 					<button id="new-card-button" class="card-button-edit">{{ _ new-card-button }}</button>
 					<button id="new-phrase-button" class="card-button-edit">{{ _ new-phrase-button }}</button>
 					<br>
-					<input type="file" id="fileupload" accept="application/json"><button id="import-deck-button" class="card-button-edit">{{ _ import-deck-button }}</button></input>
+					<input type="file" id="fileupload" accept="application/json"/><button id="import-deck-button" class="card-button-edit">{{ _ import-deck-button }}</button>
 					<button id="export-deck-button" class="card-button-edit">{{ _ export-deck-button }}</button>
 
 					<button id="clear-deck-button" class="card-button-edit">{{ _ clear-deck-button }}</button>
