--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -15,10 +15,16 @@
 				<p>{{ _ input-mode-p }}</p>
 				<div id="input-mode-internal">
 					<div>
-						<input 	type="radio" name="type" value="false" checked onclick="window.bUsingPinyinConversion = false">{{ _ input-mode-none }}</input>
+						<label>
+							<input type="radio" name="type" value="false" checked onclick="window.bUsingPinyinConversion = false">
+							{{ _ input-mode-none }}
+						</label>
 					</div>
 					<div title="{{ _ pinyin-input-description }}">
-						<input type="radio" name="type" value="true" onclick="window.bUsingPinyinConversion = true">Pin1 yin1</input>
+						<label>
+							<input type="radio" name="type" value="true" onclick="window.bUsingPinyinConversion = true">
+							Pin1 yin1
+						</label>
 					</div>
 				</div>
 			</section>
@@ -26,7 +32,7 @@
 			<section id="card-edit-section" class="deck">
 				<!-- Javascript will fill this -->
 			</section>
-			<!-- This is normaly hidden, except when editing phrases. When editing phrases thist will be populated with previews of every card in -->
+			<!-- This is normally hidden, except when editing phrases. When editing phrases this will be populated with previews of every card in -->
 			<section id="phrase-preview-section" style="display: none;">
 				<h1 class="centered">{{ _ phrase-preview-section-header }}</h1>
 				<section id="phrase-preview-section-container" class="deck">
