Added extensive mode + fixed multible critical bugs + we no longer display multiple cards when editing or creating a phrase

--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -41,6 +41,7 @@
 			</section>
 			<section id="navigation-footer">
 				<button id="finish-edit-button" class="card-button-edit">{{ _ finish-edit-button }}</button>
+				<button id="delete-edit-button" class="card-button-edit" style="display:none">{{ _ delete-edit-button }}</button>
 				<button id="cancel-edit-button" class="card-button-edit">{{ _ cancel-edit-button }}</button>
 			</section>
 		</main>
