--- a/deck.html
+++ b/deck.html
@@ -22,6 +22,11 @@
 					<p id="average-knowledge-level-field">{{ _ average-knowledge-level-field }}: </p>
 					<p id="average-session-length-field">{{ _ average-session-length-field }}: </p>
 					<p id="time-spent-in-sessions-field">{{ _ time-spent-in-sessions-field }}: </p>
+					<h3>{{ _ game_modifiers_header }}</h3>
+					<label title="{{ _ extensive-mode-title }}">
+						<input type="checkbox" id="extensive-mode-checkbox" name="{{ _ extensive-mode-aria-label }}" aria-label="{{ _ extensive-mode-aria-label }}"/>
+						{{ _ extensive-mode-label }}
+					</label>
 				</div>
 				<div id="new-card" class="card centered">
 					<h1 id="new-card-header">+</h1>
