--- a/deck-edit-card.html
+++ b/deck-edit-card.html
@@ -13,25 +13,36 @@
 			<script src="https://cdn.jsdelivr.net/npm/hanzi-writer/dist/hanzi-writer.min.js"></script>
 			<section id="input-mode" class="centered">
 				<p>{{ _ input-mode-p }}</p>
-				<div id="input-mode-internal">
-					<div>
-						<label>
-							<input type="radio" name="type" value="false" checked onclick="window.bUsingPinyinConversion = false">
-							{{ _ input-mode-none }}
-						</label>
-					</div>
-					<div title="{{ _ pinyin-input-description }}">
-						<label>
-							<input type="radio" name="type" value="true" onclick="window.bUsingPinyinConversion = true">
-							Pin1 yin1
-						</label>
-					</div>
+				<div>
+					<label>
+						<input type="radio" name="type" value="false" checked onclick="window.currentIME = ''; window.IMEIndex = 0">
+						{{ _ input-mode-none }}
+					</label>
+				</div>
+				<div title="{{ _ pinyin-input-description }}">
+					<label>
+						<input type="radio" name="type" value="true" onclick="window.currentIME = 'pinyin'; window.IMEIndex = 0">
+						Pin1 yin1
+					</label>
+				</div>
+				<div title="{{ _ romaji-hiragana-input-description }}">
+					<label>
+						<input type="radio" name="type" value="true" onclick="window.currentIME = 'romaji'; window.IMEIndex = 0">
+						Romaji Hiragana
+					</label>
+				</div>
+				<div title="{{ _ romaji-katakana-input-description }}">
+					<label>
+						<input type="radio" name="type" value="true" onclick="window.currentIME = 'romaji'; window.IMEIndex = 1">
+						Romaji Katakana
+					</label>
 				</div>
 			</section>
 
 			<section id="card-edit-section" class="deck">
 				<!-- Javascript will fill this -->
 			</section>
+
 			<!-- This is normally hidden, except when editing phrases. When editing phrases this will be populated with previews of every card in -->
 			<section id="phrase-preview-section" style="display: none;">
 				<h1 class="centered">{{ _ phrase-preview-section-header }}</h1>
@@ -39,6 +50,7 @@
 					<!-- This will be filled with preview cards from Javascript -->
 				</section>
 			</section>
+
 			<section id="navigation-footer">
 				<button id="finish-edit-button" class="card-button-edit">{{ _ finish-edit-button }}</button>
 				<button id="delete-edit-button" class="card-button-edit" style="display:none">{{ _ delete-edit-button }}</button>
@@ -46,6 +58,7 @@
 			</section>
 		</main>
 		{{ include Components/footer.tmpl.html }}
+		<script src="./IME.js"></script>
 		<script src="./deck-new.js"></script>
 	</body>
 </html>
