--- a/deck.html
+++ b/deck.html
@@ -22,10 +22,16 @@
 					<p id="average-knowledge-level-field">{{ _ average-knowledge-level-field }}: </p>
 					<p id="average-session-length-field">{{ _ average-session-length-field }}: </p>
 					<p id="time-spent-in-sessions-field">{{ _ time-spent-in-sessions-field }}: </p>
+
 					<h3>{{ _ game_modifiers_header }}</h3>
 					<label title="{{ _ extensive-mode-title }}">
 						<input type="checkbox" id="extensive-mode-checkbox" name="{{ _ extensive-mode-aria-label }}" aria-label="{{ _ extensive-mode-aria-label }}"/>
 						{{ _ extensive-mode-label }}
+					</label>
+					<br>
+					<label title="{{ _ level-reduce-title }}" style="display: block; margin-top: 0.5rem">
+						{{ _ level-reduce-label }}
+						<input type="range" id="level-reduce-slider" name="{{ _ level-reduce-aria-label }}" aria-label="{{ _ level-reduce-aria-label }}" min="0" max="1" value="0" step="0.01" style="margin: 0">
 					</label>
 				</div>
 				<div id="new-card" class="card centered">
