--- a/about.html
+++ b/about.html
@@ -45,9 +45,7 @@
 			</ol>
 			<p>{{ _ about_p5 }}</p>
 			<ol>
-				<li>{{ _ about_p5_li_1 {{ raw <a href="https://github.com/ProHunter67BG">Hristian Rusev</a>}} }}</li>
-				<li>{{ _ about_p5_li_2 {{ raw <a href="https://github.com/Neyko641">Neyko Naydenov</a>}} }}</li>
-				<li>{{ _ about_p5_li_3 {{ raw <a href="https://github.com/nick-1666">Nick-1666</a>}} }}</li>
+				<li>{{ _ about_p5_li_3 {{ raw <a href="https://github.com/fami-fish">Nick</a>}} }}</li>
 			</ol>
 			<h1>{{ _ about_h4 }}</h1>
 			<h2>{{ _ about_h4_h1 }}</h2>
@@ -55,10 +53,8 @@
 			<p>{{ _ about_a1 {{ raw <a href="https://grammarly.com">Grammarly</a>}} }}</p>
 
 			<h1>{{ _ about_h5 }}</h1>
-			<p>{{ _ about_h5_3 {{ raw <a href="https://madladsquad.com/">MadLad Squad</a>}} }}</p>
+			<p>{{ _ about_h5_3 {{ raw <a href="https://madladsquad.com/">MadLadSquad</a>}} }}</p>
 			<ol>
-				<li><a href="https://bgks.madladsquad.com">BGKS</a>{{ _ about_h5_1 }}</li>
-				<li><a href="https://littok.madladsquad.com">LitTok</a>{{ _ about_h5_2 }}</li>
 				<li>
 					<a href="https://github.com/MadLadSquad/UntitledIBusHandwriting">UntitledIBusHandwriting</a>{{ _ about_h5_4 {{ raw <a href="https://en.wikipedia.org/wiki/Intelligent_Input_Bus">ibus</a>}} }}
 				</li>
